# FileSharer_via_GigaFileDelivery_MacOS

./: README.md  pyproject.toml  to-gigafile.py
